--- a/Windows/Main/Main.csproj
+++ b/Windows/Main/Main.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Checker.cs" />
     <Compile Include="Generator.cs" />
+    <Compile Include="PasswordManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartWindow.cs" />
